--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -3,6 +3,7 @@
   
   <ItemGroup>
     <PackageReference Update="dotenv.net" Version="3.1.1" />
+    <PackageReference Update="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.12" />
     <PackageReference Update="Mono.Options" Version="6.12.0.148" />
     <PackageReference Update="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Update="Serilog" Version="2.12.0" />
