Began adding stubs for handling HTTP requests.

--- a/src/ActivityPub.Inbox.Common/ActivityPub.Inbox.Common.csproj
+++ b/src/ActivityPub.Inbox.Common/ActivityPub.Inbox.Common.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ActivityStreams\src\KristofferStrube.ActivityStreams\KristofferStrube.ActivityStreams.csproj" />
     <ProjectReference Include="..\..\SethCS\LibSethCS\LibSethCS.csproj" />
   </ItemGroup>
 
