--- a/src/ActivityPub.Inbox.Web/ActivityPub.Inbox.Web.csproj
+++ b/src/ActivityPub.Inbox.Web/ActivityPub.Inbox.Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="dotenv.net" />
+    <PackageReference Include="Microsoft.AspNetCore.HttpOverrides" />
     <PackageReference Include="Mono.Options" />
     <PackageReference Include="Serilog" />
     <PackageReference Include="Serilog.AspNetCore" />
